# discord-mpd

./: .env.example  Cargo.toml  Rocket.toml
discord/: Cargo.toml
discord/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  mpd_client.rs
src/: discord.rs  helper.rs  main.rs  mpd_client.rs  web.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/static/: player.html  style.css
web/templates/: index.html
