[package]
name = "discord-mpd"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[dependencies]
shared = { path = "shared" }
discord = { path = "discord" }
web = { path = "web" }
tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "rt-util"] }

# Enable optimization of dependencies even when using a non-release build as
# igo-rs (from romanize) overflows the stack otherwise.
[profile.dev.package."*"]
opt-level = 3

[workspace]
