[package]
name = "discord-mpd"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[dependencies]
shared = { path = "shared" }
discord = { path = "discord" }
web = { path = "web" }
tokio = { version = "1.2.0", features = ["full"] }

# Enable optimizations for igo-rs (from romanize) even when using a non-release build as it
# overflows the stack otherwise.
[profile.dev.package.igo-rs]
opt-level = 3

[workspace]
