[package]
name = "discord"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serenity = { version = "0.11.5", default-features = false, features = ["voice", "client", "cache", "model", "gateway", "rustls_backend"] }
env_logger = "0.9.0"
tokio = { version = "1.2.0", features = ["full"] }
songbird = "0.3.0"
