[package]
name = "shared"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2021"

[dependencies]
log = "0.4.1"
dotenv = "0.15.0"
mpd = { git = "https://github.com/kstep/rust-mpd.git" } # Last release was ages ago...
romanize = { git = "https://github.com/Bobo1239/romanize.git" }
