[package]
name = "web"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[dependencies]
shared = { path = "../shared" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false }
itertools = "0.10.0"
tokio = { version = "1.2.0", features = ["full"] }
